# static-server

./: CMakeLists.txt  Dockerfile  README.md
include/: Acceptor.h  Client.h  ExceptionHandler.h  HTTPHandler.h  IAcceptor.h  IHandler.h  LockFreeQueue.h  LoggingHandler.h  Request.h  Response.h  Server.h  ThreadPool.h  TimeLogger.h  Utils.h
src/: CMakeLists.txt  Client.cpp  Client.h  FileReader.cpp  FileReader.h  HTTPHandler.cpp  HTTPHandler.h  IWriteReader.h  LockFreeQueue.h  LoggingHandler.cpp  LoggingHandler.h  Request.cpp  Response.cpp  Response.h  ResponseBuilder.cpp  ResponseBuilder.h  Server.cpp  Server.h  ThreadPool.h  Utils.cpp  main.cpp
tests/: httptest.py
